--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@
       <div class="col-md-12 text-center"><img id="foto" src="img/avatar.png" class="img-responsive"></div>
     </div>
     <div class="row text-center" style = "margin-top: 30px;">
-      <div class="col-md-6 col-sm-6 wow fadeInDown" data-wow-delay="400ms">
+      <div class="col-md-6 col-sm-6 wow fadeInDown" data-wow-delay="1000ms">
         <div class="achievement-box"> <span class="count" id="streamings">0</span>
           <h4>Streamings</h4>
         </div>
       </div>
-      <div class="col-md-6 col-sm-6 wow fadeInDown" data-wow-delay="200ms">
+      <div class="col-md-6 col-sm-6 wow fadeInDown" data-wow-delay="1000ms">
         <div class="achievement-box"> <span class="count" id="royalties">0</span>
           <h4>Royalties</h4>
         </div>
@@ -148,7 +148,7 @@
 <div id="footer">
   <div class="container text-center">
     <div class="fnav">
-      <p>2020, Raissa Pimentel, Thayna Baldão.</p>
+      <p>2020, Raissa Pimentel, Thayna Baldão</p>
       <p>Design por <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
     </div>
   </div>
